--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "tlshop-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -8,11 +16,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.0",
-    "node": "^20.19.0",
-    "scripts": {
-      "dev": "nodemon server.js"
-    }
+    "mysql2": "^3.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
